force-app/main/default/objects/ProductGroup__c/ProductGroup__c.object-meta.xml
<CustomObject>
    <label>품목군</label>
    <pluralLabel>Product Groups</pluralLabel>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>