force-app/main/default/objects/ProductGroup__c/fields/IsExperienceActive__c.field-meta.xml
<CustomField>
    <fullName>IsExperienceActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Experience Portal</label>
    <type>Checkbox</type>
</CustomField>