force-app/main/default/objects/ProductGroup__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ProductGroup__c.ProductLevel__c</field>
            <operation>notEqual</operation>
            <value>4: Detail</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProductGroup__c</referenceTo>
    <relationshipLabel>Product Group</relationshipLabel>
    <relationshipName>ProductGroup</relationshipName>
    <type>Lookup</type>
</CustomField>