force-app/main/default/objects/ProductGroup__c/fields/ProductLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductLevel__c</fullName>
    <label>Product Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GroupLevel1</fullName>
                <label>1: 대분류</label>
            </value>
            <value>
                <fullName>GroupLevel2</fullName>
                <label>2: 중분류</label>
            </value>
            <value>
                <fullName>GroupLevel3</fullName>
                <label>3: 소분류</label>
            </value>
            <value>
                <fullName>GroupLevel4</fullName>
                <label>4: 세분류</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>