force-app/main/default/objects/ProductGroup__c/fields/SimilarWord__c.field-meta.xml
<CustomField>
    <fullName>SimilarWord__c</fullName>
    <label>Similar Word</label>
    <length>255</length>
    <type>Text</type>
</CustomField>