force-app/main/default/objects/ProductGroup__c/fields/Synonym__c.field-meta.xml
<CustomField>
    <fullName>Synonym__c</fullName>
    <label>Synonym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>